// If we did not define the syntax, it would take the syntax as proto2 by default
syntax = "proto3";

// This is where the autogenerated java classes are gonna be stored
package com.medicamentos_management.stubs.result;

// With this line, I am saying that create multiple classes rather than a single class
option java_multiple_files = true;
// This is the request message
message ResultRequest{
  int32 id = 1;
}

// This is the response message
message ResultResponse{
  int32 id = 1;
  string codigo = 2;
  string nombreComercial = 3;
  string nombreDroga = 4;
  TipoMedicamento tipo = 5;
}

message TipoMedicamento{
  int32 id = 1;
  string nombre = 2;
}


// Now let's define our service
service ResultService{
  rpc getResultForMedicamento(ResultRequest) returns (ResultResponse);
  rpc getResultForTipoMedicamento(ResultRequest) returns (TipoMedicamento);
}